Switch API login to clinic phone
